# just-dna-format

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
compiler/: README.md  pyproject.toml
compiler/src/just_dna_compiler/: __init__.py  cache.py  compiler.py  models.py  resolver.py
compiler/tests/: test_compile.py  test_compiler_regression.py  test_identity_roundtrip.py  test_logs.py  test_resolver_integration.py  test_resolver_unit.py  test_roundtrip_regressions.py  test_v02.py  test_v03.py  test_v03_roundtrip.py  test_v04_compile.py
docs/: CHANGELOG.md  COMPILER.md  CONSTITUTION.md  CONSUMER_FIELD_NOTES.md  CONSUMER_ROUND2_AND_0_5.md  PROPOSAL_0_4.md  REFERENCE_EXAMPLES.md  ROADMAP.md  USE_CASES.md
schema/: README.md  pyproject.toml
schema/src/just_dna_format/: __init__.py  aggregate.py  base.py  binning.py  derive.py  identity.py  integrity.py  manifest.py  pgs.py  pgx.py  reference.py  signing.py  spec.py  vocab.py
schema/tests/: test_aggregate.py  test_derive.py  test_dsl_regression.py  test_identity.py  test_integrity.py  test_logs.py  test_manifest.py  test_pmid.py  test_reference.py  test_signing.py  test_spec.py  test_v04.py  test_variant_key_freeze.py
src/just_dna_module/: __init__.py  identity.py  integrity.py  manifest.py
tests/: test_identity.py  test_integrity.py  test_manifest.py
