[project]
name = "just-dna-format"
version = "0.2.0"
description = "Declarative schema + integrity contract for just-dna annotation modules (DSL spec, manifest, digests)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "cryptography>=44.0.0",
]

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
